# open-iban-registry

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  requirement.txt
.github/workflows/: docker-image.yml
app/: main.py
app/core/: error_response.py  logger.py  settings.py
app/db/: config_db.py  iban_registry_mongo_repository.py
app/model/: iban_registry.py  iban_registry_bban.py  iban_registry_contact.py  iban_registry_contact_details.py  iban_registry_element.py  iban_registry_iban.py  iban_registry_updates.py  upload_iban_registry_result.py
app/routers/: iban_registry_router.py  main_router.py
app/services/: iban_registry_mapper.py  iban_registry_service.py
docs/: iban-registry.txt  iban_registry.json
